--- a/src/html/chat.html
+++ b/src/html/chat.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>cdqwertz's chatbot</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<style>
 			body {
 				background : #dddddd;
@@ -67,7 +68,7 @@
 		</div>
 		
 		<form id="my_form" method="get">
-			<input type="text" id="message" name="message" autofocus="autofocus">
+			<input type="text" id="message" name="message" autofocus="autofocus" autocomplete="off">
 			<input type="submit" value="Send" id="send">
 		</form>
 	</body>
